# wireless-DDoS-GAN

./: CMakeLists.txt  COPYRIGHT  README.md  file_names.csv  install-torch.sh  losses.csv  main.cpp  plot_loss.py  test.py  training.txt
include/io_lib/: gan.h  image_classifier.h  input_buffer.h  ip_manager.h
lib/: CMakeLists.txt
lib/io_lib/: CMakeLists.txt  gan.cpp  image_classifier.cpp  input_buffer.cpp  ip_manager.cpp
